Бобавлен пункт "постановка задачи". Проиллюстрирована ориентация проекта весьма спорными тезисами, но зато можно выяснить, насколько точно мы понимаем друг-друга.

--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+Постановка задачи
+=================
+Расписатор подразумевает гибкую, модульную и универсальную систему для развертывания системы коллективного тайм-менеджмента.
+В качестве оригинальных иллюстраций:
+1) традиционная задача Летней Школы, интеллектуальное генерирование расписания дежурств по-хозяйству;
+2) конкуренция с Микрософт Эксчейндж + Аутлук везде, где это возможно;
+3) контроль человеческих русурсов по аналогии с пакетами бухгалтерского учета.
+
 Собрать
 =======
 cmake . && make
