--- a/README
+++ b/README
@@ -6,12 +6,16 @@
 2) конкуренция с Микрософт Эксчейндж + Аутлук везде, где это возможно;
 3) контроль человеческих русурсов по аналогии с пакетами бухгалтерского учета.
 
-Собрать
-=======
+Примеры использования, супер-краткую документацию и FAQ можно найти в файле "usage".
+
+
+Как собрать
+=======i===
 cmake . && make
 
+
 Code Style
-~~~~~~~~~~
+==========
 Предлагается следование следующим правилам::
 
     F001 Source files should not use the '\r' (CR) character
