Revert "Merge branch 'master' of github.com:alex-ac/UniSched"
This reverts commit 4b1b92c657b8ca7e2f19f13de03f6923acfa3c3a, reversing
changes made to a121a11cbddcb7088aa01c848b84af72bf7e95b8.

--- a/README
+++ b/README
@@ -6,16 +6,12 @@
 2) конкуренция с Микрософт Эксчейндж + Аутлук везде, где это возможно;
 3) контроль человеческих русурсов по аналогии с пакетами бухгалтерского учета.
 
-Примеры использования, супер-краткую документацию и FAQ можно найти в файле "usage".
-
-
-Как собрать
-=======i===
+Собрать
+=======
 cmake . && make
 
-
 Code Style
-==========
+~~~~~~~~~~
 Предлагается следование следующим правилам::
 
     F001 Source files should not use the '\r' (CR) character
