Добавлен раздел "Программные требования" для информации о поддерживаемых компиляторах.

--- a/README
+++ b/README
@@ -6,6 +6,14 @@
 2) конкуренция с Микрософт Эксчейндж + Аутлук везде, где это возможно;
 3) контроль человеческих русурсов по аналогии с пакетами бухгалтерского учета.
 
+Программные требования
+======================
+В данный момент поддержка GCC версии 4.3 и выше. Это связано с элементами c++, вошедшие 
+в новый стандарт c++11 (будучи до этого реализованными передовыми компиляторами в рамках 
+неофициального стандарта c++x0). Например, в проекте повсеместно используется:
+* ключевое слово auto;
+
+
 Собрать
 =======
 cmake . && make
