Testing account settings.

--- a/README
+++ b/README
@@ -14,7 +14,7 @@
 Программные требования
 ======================
 
-    В данный момент для сборки требуется компилятор, поддерживающий C++0x,
+    В данный момент для сборки требуется компилятор, поддерживающий C++11,
 актуальный список можно найти тут:
 http://wiki.apache.org/stdcxx/C++0xCompilierSupport
 
