Currently need package libsqlite3-dev to compile the project.

--- a/README
+++ b/README
@@ -14,11 +14,11 @@
 Программные требования
 ======================
 
-    В данный момент для сборки требуется компилятор, поддерживающий C++11,
+    1. В данный момент для сборки требуется компилятор, поддерживающий C++11,
 актуальный список можно найти тут:
 http://wiki.apache.org/stdcxx/C++0xCompilierSupport
-
-    Также для сборки требуется CMake версии не ниже 2.8.
+    2. Также для сборки требуется CMake версии не ниже 2.8.
+    3. В текущей версии проекта используется база данных sqlite3. Требуется пакет libsqlite3-dev.
 
 Как собрать
 ===========
