Options section in README is added.

--- a/README
+++ b/README
@@ -18,18 +18,33 @@
 актуальный список можно найти тут:
 http://wiki.apache.org/stdcxx/C++0xCompilierSupport
     2. Также для сборки требуется CMake версии не ниже 2.8.
-    3. В текущей версии проекта используется база данных sqlite3. Требуется пакет libsqlite3-dev.
 
 Как собрать
 ===========
 
     Для сборки на UNIX & UNIX like системах исполните в директории сборки:
 
-    cmake path/to/source/directory && make
+    cmake [OPTIONS] path/to/source/directory && make
     
     Где path/to/source/directory - путь до директории с исходным кодом.
 Настоятельно не рекомендуется сборка в директории репозитория (коммиты с файлами
-сборки будут отбрасываться).
+сборки будут отбрасываться). OPTIONS - параметры сборки.
+
+Опции сборки
+============
+    
+    Ниже перечисленны переменные cmake, влияющие на конфигурацию сборки программы.
+Пример использования:
+
+    cmake -D WITH_SQLITE=N ../UniSched
+
+    Подготовить проект к сборке без поддержки sqlite
+
+    Опция       Значение по Описание
+                 умолчанию
+
+    WITH_SQLITE     Y       Собирать бэкэнд к базе данных sqlite3 (необходимо
+                            наличие в системе библиотеки и заголовков).
 
 Code Style
 ==========
