Some minor changes in README and CMakeLists.txt are.

--- a/README
+++ b/README
@@ -33,17 +33,18 @@ http://wiki.apache.org/stdcxx/C++0xCompilierSupport
 Опции сборки
 ============
     
-    Ниже перечисленны переменные cmake, влияющие на конфигурацию сборки программы.
-Пример использования:
+    Ниже перечисленны переменные cmake, влияющие на конфигурацию сборки
+программы. Перед запуском с новыми аргументами необходимо удалить CMakeCache.txt
+в директории сборки. Пример использования:
 
-    cmake -D WITH_SQLITE=N ../UniSched
+    cmake -D WITH_SQLITE=Y ../UniSched
 
     Подготовить проект к сборке без поддержки sqlite
 
     Опция       Значение по Описание
                  умолчанию
 
-    WITH_SQLITE     Y       Собирать бэкэнд к базе данных sqlite3 (необходимо
+    WITH_SQLITE     N       Собирать бэкэнд к базе данных sqlite3 (необходимо
                             наличие в системе библиотеки и заголовков).
 
 Code Style
