Added info on dummyui in README

--- a/README
+++ b/README
@@ -47,6 +47,9 @@ http://wiki.apache.org/stdcxx/C++0xCompilierSupport
     WITH_SQLITE     N       Собирать бэкэнд к базе данных sqlite3 (необходимо
                             наличие в системе библиотеки и заголовков).
 
+    WITH_DUMMYUI    Y       Собирать пользовательский интерфейс-заглушку (ничего
+                            полезного не делает, просто сообщает о себе).
+
 Code Style
 ==========
 
