Информация про запуск в README

--- a/README
+++ b/README
@@ -50,6 +50,15 @@ http://wiki.apache.org/stdcxx/C++0xCompilierSupport
     WITH_DUMMYUI    Y       Собирать пользовательский интерфейс-заглушку (ничего
                             полезного не делает, просто сообщает о себе).
 
+
+Как запустить
+=============
+
+    На текущий момент, работает только интерфейс-заглушка пользователя.
+
+    ./src/raspisator --iface DummyUI
+
+
 Code Style
 ==========
 
