--- a/README
+++ b/README
@@ -50,6 +50,8 @@ http://wiki.apache.org/stdcxx/C++0xCompilierSupport
     WITH_DUMMYUI    Y       Собирать пользовательский интерфейс-заглушку (ничего
                             полезного не делает, просто сообщает о себе).
 
+    WITH_CLI        Y       Собирать интерфейс коммандной строки (в разработке)
+
 
 Как запустить
 =============
